add MemoryTableIterator and testcase