@@ -18,3 +18,15 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs("--enable-preview")
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs("--enable-preview")
+}
